--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,13 @@ img.verif_img {
 
 /********** Global **********/
 
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
 body {
 	background: url(../images/handmadepaper.png);
 }
